--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-cv</title>
+    <meta
+      name="description"
+      content="Yehor Shapanov — Tech Lead & Senior Software Engineer. CV and experience."
+    />
+    <meta name="theme-color" content="#0f172a" />
+    <title>Yehor Shapanov — CV</title>
   </head>
   <body>
     <div id="root"></div>
